[project]
name = "photoshare"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasilivich",email = "137120278+Vasilivi4@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
